[SUREFIRE-1889] Support Java 16 in Surefire Integration Tests